--- a/application.yml
+++ b/application.yml
@@ -2,14 +2,14 @@ Spring:
   application:
        name: Config-Default
        
-  datasource:
-    url: jdbc:postgresql://localhost:5432/microservices
-    username: postgres
-    password: sa123     
- jpa:
-    hibernate:
-      ddl-auto: update
-      show-sql: true   
+ #  datasource:
+ #    url: jdbc:postgresql://localhost:5432/microservices
+ #    username: postgres
+ #    password: sa123     
+ # jpa:
+ #    hibernate:
+ #      ddl-auto: update
+ #      show-sql: true   
       
 # eureka:
 #  client:
